# openf4

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  _makefile_8am_source.html  _makefile_8in_source.html  aclocal.m4  annotated.html  avl-critical-pair_8h.html  avl-critical-pair_8h__dep__incl.map  avl-critical-pair_8h__dep__incl.md5  avl-critical-pair_8h__incl.map  avl-critical-pair_8h__incl.md5  avl-critical-pair_8h_source.html  avl-critical-pair_8inl.html  avl-critical-pair_8inl__dep__incl.map  avl-critical-pair_8inl__dep__incl.md5  avl-monomial_8h.html  avl-monomial_8h__dep__incl.map  avl-monomial_8h__dep__incl.md5  avl-monomial_8h__incl.map  avl-monomial_8h__incl.md5  avl-monomial_8h_source.html  avl-monomial_8inl.html  avl-monomial_8inl__dep__incl.map  avl-monomial_8inl__dep__incl.md5  avl-pointer-critical-pair_8h.html  avl-pointer-critical-pair_8h__dep__incl.map  avl-pointer-critical-pair_8h__dep__incl.md5  avl-pointer-critical-pair_8h__incl.map  avl-pointer-critical-pair_8h__incl.md5  avl-pointer-critical-pair_8h_source.html  avl-polynomial_8h.html  avl-polynomial_8h__dep__incl.map  avl-polynomial_8h__dep__incl.md5  avl-polynomial_8h__incl.map  avl-polynomial_8h__incl.md5  (+857 more)
autom4te.cache/: output.0  output.1  output.10  output.11  output.12  output.13  output.14  output.15  output.2  output.3  output.4  output.5  output.6  output.7  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.11  traces.12  traces.13  traces.14  traces.15  traces.16  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
benchmark/: Makefile.am  Makefile.in  benchmark-gf2-extension-16bits.cpp  benchmark-gf2-extension-32bits.cpp  benchmark-gf2-extension-64bits.cpp  benchmark-gf2-extension.cpp  benchmark-gf2.cpp  benchmark-givaro-gfq.cpp  benchmark-givaro-modular-integer.cpp  benchmark-givaro-modular-log16.cpp  benchmark-int.cpp  benchmark-long.cpp  benchmark-semaev.cpp  benchmark-short.cpp  benchmark-zech.cpp
doc/: Doxyfile  mainpage.dox  page-big-prime-field.dox  page-bug-freeze.dox  page-bug-libstdcpp.dox  page-bug-transform.dox  page-dev-conventions.dox  page-dev-ideas.dox  page-download.dox  page-gf2-extension-field.dox  page-gf2-field.dox  page-small-prime-field.dox
example/: Makefile.am  Makefile.in  check-aes-gf2-extension-16bits.cpp  check-cyclic6-16bits.cpp  check-cyclic6-256bits.cpp  check-cyclic6-32bits.cpp  check-cyclic6-64bits.cpp  check-cyclic6-gf2-extension-16bits.cpp  check-cyclic6-gf2-extension-32bits.cpp  check-cyclic6-gf2-extension-64bits.cpp  check-cyclic6-gf2.cpp  check-libf4.cpp  check-random-16bits.cpp  check-random-32bits.cpp  check-random-64bits.cpp  check-random-gf2-extension-16bits.cpp  check-random-gf2-extension-32bits.cpp  check-random-gf2-extension-64bits.cpp  check-trivial1-16bits.cpp  check-trivial1-32bits.cpp  check-trivial1-64bits.cpp  check-trivial1-gf2-extension-16bits.cpp  check-trivial1-gf2-extension-32bits.cpp  check-trivial1-gf2-extension-64bits.cpp  check-trivial1-gf2.cpp  check-trivial2-16bits.cpp  check-trivial2-32bits.cpp  check-trivial2-64bits.cpp  check-trivial2-gf2-extension-16bits.cpp  check-trivial2-gf2-extension-32bits.cpp  check-trivial2-gf2-extension-64bits.cpp  check-trivial2-gf2.cpp  check-trivial3-64bits.cpp  check-trivial4-64bits.cpp  check-trivial5-64bits.cpp  test-avl-critical-pair.cpp  test-avl-monomial.cpp  test-avl-pointer-critical-pair.cpp  test-avl-polynomial.cpp  test-avl.cpp  (+28 more)
include/: avl-critical-pair.h  avl-monomial.h  avl-pointer-critical-pair.h  avl-polynomial.h  avl.h  critical-pair.h  dynamic-array.h  element-gf2-extension.h  element-gf2.h  element-givaro.h  element-prime.h  element-zech-prime.h  ideal.h  libf4.h  list-pointer-critical-pair.h  matrix-generic.h  matrix.h  monomial-array.h  monomial.h  polynomial.h  single-list.h  tagged-polynomial.h  term.h
m4/: benchmark.m4  blas.m4  debug.m4  default-path.m4  fflas-ffpack.m4  givaro.m4  gmp.m4  openmp.m4  optimisation.m4  os32vs64.m4  vectorisation.m4
openf4/: Makefile.in  config.h.in
openf4/include/: Makefile.am  Makefile.in  avl-critical-pair.h  avl-monomial.h  avl-polynomial.h  config.h.in  critical-pair.h  dynamic-array.h  element-gf2-extension.h  element-gf2.h  element-givaro.h  element-prime.h  global.h  ideal.h  list-pointer-critical-pair.h  matrix.h  monomial-array.h  monomial.h  polynomial.h  single-list.h  tagged-polynomial.h  term.h
openf4/src/: Makefile.am  Makefile.in  avl-critical-pair.inl  avl-monomial.inl  avl-polynomial.inl  critical-pair.inl  dynamic-array.inl  element-gf2-extension.inl  element-gf2.inl  element-givaro.inl  element-prime.inl  ideal.inl  libopenf4.cpp  list-pointer-critical-pair.inl  matrix.inl  monomial-array.inl  monomial.inl  polynomial.inl  single-list.inl  specialisation-echelonize-fflas-ffpack.inl  specialisation-echelonize-gf2-extension.inl  specialisation-echelonize-gf2.inl  specialisation-echelonize-prime.inl  specialisation-simd-gf2-extension.inl  specialisation-simd-prime.inl  tagged-polynomial.inl  term.inl
sage-files/: groebner_basis_f4.pyx  multi_polynomial_ideal.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_a.js  files_b.js  functions_0.js  (+29 more)
src/: Makefile.am  avl-critical-pair.inl  avl-monomial.inl  avl-pointer-critical-pair.inl  avl-polynomial.inl  avl.inl  critical-pair.inl  dynamic-array.inl  element-gf2-extension.inl  element-gf2.inl  element-givaro.inl  element-prime.inl  element-zech-prime.inl  ideal.inl  libf4.cpp  list-pointer-critical-pair.inl  matrix-generic.inl  matrix.inl  monomial-array.inl  monomial.inl  polynomial.inl  single-list.inl  specialisation-echelonize-fflas-ffpack.inl  specialisation-echelonize-gf2-extension.inl  term.inl  (+6 more)
(+42 files in other folders)
