# Headers to distribute

pkgincludesubdir=$(pkgincludedir)/include

pkgincludesub_HEADERS = avl-critical-pair.h avl-polynomial.h critical-pair.h element-gf2-extension.h element-givaro.h global.h ideal.h matrix.h 
pkgincludesub_HEADERS += monomial.h single-list.h term.h avl-monomial.h dynamic-array.h element-gf2.h element-prime.h monomial-array.h polynomial.h tagged-polynomial.h
